# ax-mcp

./: .env.example  .gitignore  ASML_Patent_Comprehensive_Verification_Report.md  ASML_Presentation_Deck.md  CONTRIBUTING.md  Makefile  Proposition311_Claude_formalized.lean  README.dev.md  README.md  config.example.json  lake-manifest.json  lakefile.lean  mcp-example.json  mcp_prover_tool_analysis.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude.yml  release.yml
.lake/: lakefile.olean  lakefile.olean.trace
axiomatic_mcp/: __init__.py
axiomatic_mcp/config/: config.py
axiomatic_mcp/domains/electronics/: __init__.py  server.py
axiomatic_mcp/providers/: middleware_provider.py
axiomatic_mcp/servers/: __init__.py
axiomatic_mcp/shared/: __init__.py  api_client.py  base_server.py  config.py  logger.py  tools.py
axiomatic_mcp/templates/: analysis_cells_template.py
examples/annotations/: README.md
examples/argmin/: README.md
examples/axmodelfitter/: README.md
examples/claude_md_example/: claude.md
examples/equations/: README.md
examples/model_builder/: README.md
examples/modelfitter/: README.md
examples/pic/: 1_show_available_pdks.md  2_show_pdk_components.md  3_create_dc_fixed_length.md  4_simulate_circuit_response.md  README.md
examples/plots/: README.md
my_lean_project/: lake-manifest.json  lakefile.toml  temp_snippet.lean
my_lean_project/MyLeanProject/: test1.lean
scripts/: setup_axiomatic.ps1  setup_axiomatic.sh
tests/: conftest.py
(+168 files in other folders)
